@@ -1,6 +1,7 @@
 0.2.0
 -----
 1. Add option to show (and sort by) year of albums in library view.
+2. Show 'Various Artists' at the top of the library view.
 
 0.1.2
 -----
